Added update package cost

--- a/db.yaml
+++ b/db.yaml
@@ -2,3 +2,8 @@ mysql_host: 'localhost'
 mysql_user: 'root'
 mysql_password: 'Kiran@0789'
 mysql_db: 'tourist_agency'
+user_table_name: 'user'
+package_table_name: 'packages'
+enquiry_table_name: 'enquiry'
+employee_table_name: 'employee'
+booking_table_name: 'bookings'
